Fixes aligns.

--- a/assets/app/app.sass
+++ b/assets/app/app.sass
@@ -34,9 +34,6 @@ $icons2x: sprite-map("icons2x/*.png")
 // Specific page customization
 ///////////////////////////////////////////////////////////////////
 
-div.test-tile
-  margin-left: 6px
-
 header.main
   width: 100%
   height: 200px
@@ -404,6 +401,7 @@ input[placeholder]
         color: $subdued-text-color
 
 .test-tile
+  margin-right: 6px
   +border-radius(6px)
   +inverse
   +inverse-text-fix
@@ -723,7 +721,7 @@ ul.gallery-entries
         height: 150px
 
 .raffle-tile
-  margin-left: 6px
+  margin-right: 6px
   +border-radius(6px)
   border: 2px solid $primary
   +inverse
@@ -747,7 +745,7 @@ ul.gallery-entries
     height: 210px
 
 .survey-tile
-  margin-left: 6px
+  margin-right: 6px
   +border-radius(6px)
   +inverse
   +inverse-text-fix
